@@ -33,6 +33,8 @@
       <li><a href="xacc-currency.html">Foreign Currency
       Accounts</a></li>
 
+      <li><a href="xacc-euro.html">GnuCash and the EURO</a></li>
+
       <li><a href="bofa-mym.html">Importing MYM (Managing Your
       Money) Files</a></li>
 
